fixed modals overflow

--- a/src/Components/Modals/ModalAddTolist/style.module.scss
+++ b/src/Components/Modals/ModalAddTolist/style.module.scss
@@ -29,6 +29,7 @@
     }
     
     &Wrapper{
+        z-index: var(--zModal);
         position: fixed;
         left: 50%;
         top: 50%;
